--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "NODE_ENV=development tsx server/index.ts",
     "build": "vite build && esbuild server/index.ts --platform=node --packages=external --bundle --format=esm --outdir=dist",
     "start": "NODE_ENV=production tsx server/index.ts"
-    "check": "tsc",
+    "check": "tsc"
     "db:push": "drizzle-kit push"
   },
   "dependencies": {
