--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "license": "MIT",
   "scripts": {
     "dev": "NODE_ENV=development tsx server/index.ts",
-    "build": "vite build && esbuild server/index.ts --platform=node --packages=external --bundle --format=esm --outdir=dist",
-    "start": "NODE_ENV=production tsx server/index.ts"
-    "check": "tsc"
+    "build": "esbuild server/index.ts --bundle --platform=node --packages=external --format=esm --outdir=dist",
+    "start": "NODE_ENV=production tsx server/index.ts",
+    "check": "tsc",
     "db:push": "drizzle-kit push"
   },
   "dependencies": {
