--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "NODE_ENV=development tsx server/index.ts",
     "build": "esbuild server/index.ts --bundle --platform=node --packages=external --format=esm --outdir=dist",
-    "start": "node dist/index.js",
+    "start": "ts-node server/index.ts"
     "check": "tsc",
     "db:push": "drizzle-kit push"
   },
