--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,46 @@
+# Dependencies
 node_modules
+.pnp
+.pnp.js
+
+# Build
 dist
+build
+out
+.vercel
+
+# Environment
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# Testing
+coverage
+
+# Logs
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Editor
+.vscode/*
+!.vscode/extensions.json
+!.vscode/settings.json
+.idea
 .DS_Store
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
+
+# Misc
+.DS_Store
+.turbo
 server/public
 vite.config.ts.*
 *.tar.gz
